Implement initial web UI dashboard with analytics, integrate DeepSeek and Gemini LLM clients, and add LLM usage logging.

--- a/UI/graph.html
+++ b/UI/graph.html
@@ -24,6 +24,7 @@
                 <a href="/" class="nav-link">Dashboard</a>
                 <a href="/graph.html" class="nav-link active">Graph</a>
                 <a href="/chart.html" class="nav-link">Charts</a>
+                <a href="/llm-costs.html" class="nav-link">LLM Costs</a>
             </nav>
         </header>
 
@@ -422,4 +423,5 @@
     </script>
 </body>
 </html>
+
 
