--- a/UI/index.html
+++ b/UI/index.html
@@ -22,6 +22,7 @@
                 <a href="/" class="nav-link active">Dashboard</a>
                 <a href="/graph.html" class="nav-link">Graph</a>
                 <a href="/chart.html" class="nav-link">Charts</a>
+                <a href="/llm-costs.html" class="nav-link">LLM Costs</a>
             </nav>
         </header>
 
@@ -268,4 +269,5 @@
     </script>
 </body>
 </html>
+
 
