--- a/UI/chart.html
+++ b/UI/chart.html
@@ -24,6 +24,7 @@
                 <a href="/" class="nav-link">Dashboard</a>
                 <a href="/graph.html" class="nav-link">Graph</a>
                 <a href="/chart.html" class="nav-link active">Charts</a>
+                <a href="/llm-costs.html" class="nav-link">LLM Costs</a>
             </nav>
         </header>
 
@@ -636,4 +637,5 @@
     </script>
 </body>
 </html>
+
 
